GNOME Bugzilla – Bug 720269
ScaleButton: scrolling on the button doesn't do anything
Last modified: 2014-08-26 12:55:39 UTC
On X11, scrolling on a GtkScaleButton changes the scale value, and so changes the icons appropriately. However on wayland, scrolling on the button doesn't do anything. Scrolling on the scale popup works fine though.
Created attachment 284245 [details] [review] scalebutton: Handle smooth scroll events This has the double effect to make scale button truly smooth, and make scrolling work on wayland, since all scrolling is "smooth" there.
Review of attachment 284245 [details] [review]: ok
Attachment 284245 [details] pushed as bb3a8ed - scalebutton: Handle smooth scroll events